--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -15,12 +15,11 @@ jobs:
         uses: actions/checkout@v3
       - name: Install dependencies
         run: | 
-          /usr/local/bin/pythonpython -m pip install --upgrade pip
+          python -m pip install --upgrade pip
           pip install -r requirements.txt
       - name: Lint with flake8
         run: | 
           flake8 service --count --select=E9,F63,F7,F82 --show-source --statistics
           flake8 service --count --max-complexity=10 --max-line-length=127 --statistics
       - name: Run unit tests with nose
-        run: | 
-          nosetests -v --with-spec --spec-color --with-coverage --cover-package=app
+        run: nosetests -v --with-spec --spec-color --with-coverage --cover-package=app
