--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Install dependencies
         run: | 
-          python -m pip install --upgrade pip
+          /usr/local/bin/python -m pip install --upgrade pip
           pip install -r requirements.txt
       - name: Lint with flake8
         run: | 
